swagger for account credentials
